--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
     "caniuse-lite": "^1.0.30001589",
     "carousel": "^0.0.3",
     "framer-motion": "^11.5.4",
+    "i18next": "^24.0.2",
+    "i18next-http-backend": "^3.0.1",
     "mysql2": "^3.11.3",
     "next": "^14.2.11",
+    "next-i18next": "^15.4.0",
+    "next-intl": "^3.25.3",
     "nodemailer": "^6.9.15",
     "photoswipe": "^5.4.3",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-i18next": "^15.1.3",
     "react-intersection-observer": "^9.8.1",
     "react-masonry-css": "^1.0.16",
     "react-modal-video": "^2.0.1",
