--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@revolist/revo-dropdown": "^3.0.1",
     "antd": "^5.21.2",
     "aos": "^2.3.4",
-    "bootstrap": "^5.2.3",
+    "autoprefixer": "^10.4.20",
+    "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001589",
     "carousel": "^0.0.3",
     "framer-motion": "^11.5.4",
     "i18next": "^24.0.2",
     "i18next-http-backend": "^3.0.1",
     "mysql2": "^3.11.3",
+    "net": "^1.0.2",
     "next": "^14.2.11",
     "next-i18next": "^15.4.0",
     "next-intl": "^3.25.3",
@@ -51,9 +53,12 @@
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "styled-jsx": "^5.1.6",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.11"
+    "@types/node": "22.10.1",
+    "tailwindcss": "^3.4.11",
+    "typescript": "5.7.2"
   }
 }
